// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header if the user is logged in and the user is not admin should show the correct navigation links 1`] = `
<div>
  <header
    class="MuiPaper-root-9 MuiPaper-elevation4-15 MuiAppBar-root-1 MuiAppBar-positionFixed-2 MuiAppBar-colorPrimary-7 mui-fixed"
  >
    <div
      class="MuiToolbar-root-36 MuiToolbar-gutters-37"
    >
      <a
        href="/"
      >
        <img
          class="Header-logo"
          src="cfd-circle-icon-white.png"
          alt="code for denver logo"
        />
      </a>
      <div
        class="MuiGrid-container-38 MuiGrid-align-items-xs-center-46 MuiGrid-justify-xs-space-between-57"
      >
        <div
          class="MuiGrid-item-39"
        >
          <a
            class="Header-link"
            href="/volunteers"
          >
            All Users
          </a>
          <a
            class="Header-link"
            href="/projects"
          >
            All Projects
          </a>
        </div>
        <div
          class="MuiGrid-item-39"
        />
      </div>
    </div>
  </header>
</div>
`;

exports[`Header if the user is not logged in should show the login button 1`] = `
<div>
  <header
    class="MuiPaper-root-9 MuiPaper-elevation4-15 MuiAppBar-root-1 MuiAppBar-positionFixed-2 MuiAppBar-colorPrimary-7 mui-fixed"
  >
    <div
      class="MuiToolbar-root-36 MuiToolbar-gutters-37"
    >
      <a
        href="/"
      >
        <img
          class="Header-logo"
          src="cfd-circle-icon-white.png"
          alt="code for denver logo"
        />
      </a>
      <div
        class="MuiGrid-container-38 MuiGrid-align-items-xs-center-46 MuiGrid-justify-xs-space-between-57"
      >
        <div
          class="MuiGrid-item-39"
        >
          <button
            tabindex="0"
            class="MuiButtonBase-root-151 MuiButton-root-129 MuiButton-textSecondary-132 MuiButton-flat-133 MuiButton-flatSecondary-135"
            type="button"
          >
            <span
              class="MuiButton-label-130"
            >
              Log In
            </span>
            <span
              class="MuiTouchRipple-root-154"
            />
          </button>
        </div>
      </div>
    </div>
  </header>
</div>
`;
